  well-designed starting houses survive the night better.

--Chills now only apply if you die in a house OR use tools in a house
  (thanks Jere).

--Fixed bug in way that MySQL UPDATE success was being detected, which
  occasionally would cause retried start_self_test, end_self_test, and
  ping_house calls to fail, leading to unfair player death (thanks Joshua
  Collins).





Version 18   2013-August-27

--Fixed glitch causing visibal animal position jump-back after robber death.





Version 17   2013-August-27

--Fixed bug that was causing useLargestWindow setting to be ignored.  Now
  window size can be set by user (thanks Colorfusion).

--Fixed vision 'leak' through diagonals.

--Fixed directions that animals face when they can't see you so that they don't
  suddenly jump orientations when they come into view.

--Added a club tool (bludgeon functionality of the crowbar, without the
  door-opening capabilities, allowing it to be cheaper).  Removed
  mostly-useless voltage detector to make room for it.

--Changed so that all still-living animals jump back to their starting
  positions, if possible, post-robbery.





Version 16   Live Server Fixes

--Changed so that every house earns something in each pay interval (a minimum
  fraction of the maximum possible pay).

--Quadrupled all tool prices.

--Changed tool and tile prices according to a new four-tiered pricing model
  with a fixed build-cost/bypass-cost ratio for everything (pricing theory).

--Changed bypass-cost theory for mobile bottlenecks (pit bulls).  Direct
  bypass (gun) now costs 1x, and disabling (meat) costs 1/8x.





Version 16   2013-August-21

--Added support for web proxies (thanks Florian Yusuf Ali).

--Fixed visibility computation mismatch across platforms (caused by floating
  point round-off inconsistencies between platforms) by switching to an integer
  visibility computation.  This was causing server-side simulation of robberies
  to fail in rare cases (thanks Raymond Koo).
